--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ com_crashlytics_export_strings.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
+gradle.properties
+app/google-services.json
 
 # Gradle generated files
 .gradle/
