--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta6'
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0' //Automatically downloads deps.
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,7 +22,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
-//ext {
-//    supportLibVersion = '23.2.0'  // variable that can be referenced to keep support libs consistent
-//}
