--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
 ext{
     //version numbers
     junitVersion = '4.12'
-    supportLibVersion = '23.2.0'
+    supportLibVersion = '23.2.1'
+    okhttpVersion = '3.1.2'
+    simplexmlVersion = '2.7.1'
 }
 
 dependencies {
@@ -36,4 +38,10 @@ dependencies {
     compile "com.android.support:support-v4:${supportLibVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
+    compile "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+    compile("org.simpleframework:simple-xml:${simplexmlVersion}"){
+        exclude module: 'stax'
+        exclude module: 'stax-api'
+        exclude module: 'xpp3'
+    }
 }
