--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="info.santhosh.evlo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,6 +29,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="info.santhosh.evlo.CommodityListActivity" />
         </activity>
+        <service
+            android:name=".Services.GetXmlService"
+            android:exported="false"/>
     </application>
 
 </manifest>
