--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ ext{
     //version numbers
     junitVersion = '4.12'
     supportLibVersion = '23.3.0'
-    okhttpVersion = '3.1.2'
+    okhttpVersion = '2.2.0'
     simplexmlVersion = '2.7.1'
 }
 
@@ -39,7 +39,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
-    compile "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+    compile "com.squareup.okhttp:okhttp:${okhttpVersion}"
     compile("org.simpleframework:simple-xml:${simplexmlVersion}"){
         exclude module: 'stax'
         exclude module: 'stax-api'
