--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext{
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile "junit:junit:${junitVersion}"
+    compile 'net.opacapp:multiline-collapsingtoolbar:1.0.0'
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:support-v4:${supportLibVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
