--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion "25.0.0"
 
     defaultConfig {
@@ -29,6 +29,7 @@ ext{
     supportLibVersion = '25.0.1'
     okhttpVersion = '2.2.0'
     simplexmlVersion = '2.7.1'
+    stethoVersion = '1.4.1'
 }
 
 dependencies {
@@ -41,6 +42,7 @@ dependencies {
     compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     compile "com.squareup.okhttp:okhttp:${okhttpVersion}"
+    debugCompile "com.facebook.stetho:stetho:${stethoVersion}"
     compile("org.simpleframework:simple-xml:${simplexmlVersion}"){
         exclude module: 'stax'
         exclude module: 'stax-api'
