--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".EvloApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CommodityListActivity"
+            android:name=".ui.CommodityListActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
@@ -25,12 +26,12 @@
                 android:resource="@xml/searchable"/>
         </activity>
         <activity
-            android:name=".CommodityDetailActivity"
-            android:parentActivityName=".CommodityListActivity"
+            android:name=".ui.CommodityDetailActivity"
+            android:parentActivityName=".ui.CommodityListActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="info.santhosh.evlo.CommodityListActivity" />
+                android:value="info.santhosh.evlo.ui.CommodityListActivity" />
         </activity>
         <service
             android:name=".Services.GetXmlService"
