--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.search.SearchActivity"
+            android:windowSoftInputMode="stateVisible"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
             android:name=".ui.CommodityListActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -40,19 +45,11 @@
             android:name=".ui.CommodityDetailActivity"
             android:parentActivityName=".ui.CommodityListActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <!-- Parent activity meta-data to support 4.0 (15) and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="info.santhosh.evlo.ui.CommodityListActivity" />
         </activity>
         <activity
             android:name=".ui.favorites.FavoritesActivity"
             android:parentActivityName=".ui.CommodityListActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <!-- Parent activity meta-data to support 4.0 (15) and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="info.santhosh.evlo.ui.CommodityListActivity" />
         </activity>
         <service
             android:name=".service.GetXmlService"
