add service call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".ui.search.SearchActivity"
             android:windowSoftInputMode="stateVisible"
+            android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
