--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,12 @@ android {
         versionName gitVersionName
         vectorDrawables.useSupportLibrary = true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         debug {
             minifyEnabled true
