--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta4'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0' //Automatically downloads deps.
 
         // NOTE: Do not place your application dependencies here; they belong
