--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name=".EvloApplication"
+        android:name=".application.EvloApplication"
         android:allowBackup="true"
         android:icon="@mipmap/evlo_ic_launcher"
         android:label="@string/app_name"
+        android:fullBackupContent="@xml/backup_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
