--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply from: "$project.rootDir/tools/script-git-version.gradle"
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
         applicationId "info.santhosh.evlo"
@@ -67,7 +67,7 @@ dependencies {
     compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
 
-    // job scheduler backkground compatability
+    // job scheduler background compatability
     compile 'com.evernote:android-job:1.1.10'
 
     // ui
