--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ android {
             minifyEnabled true
             useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            testProguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardTest-rules.pro'
         }
     }
 
@@ -45,15 +44,21 @@ android {
     }
 }
 
-ext{
+ext {
     // version numbers
     junitVersion = '4.12'
-    supportLibVersion = '26.0.0'
+    supportLibVersion = '26.0.1'
     constraintLayoutVersion = '1.0.2'
     okhttpVersion = '2.2.0'
+    okhttp3Version = '3.8.1'
     simplexmlVersion = '2.7.1'
     stethoVersion = '1.4.1'
     leakCanaryVersion = '1.5.1'
+    materialIntroVersion = 'v4.2.2'
+    evernoteJobVersion = '1.1.11'
+    stickyHeaderVersion = '0.2.8'
+    protoModelVersion = '1.2-SNAPSHOT'
+    multidexVersion = '1.0.1'
 }
 
 dependencies {
@@ -66,27 +71,28 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
 
     // job scheduler background compatibility
-    compile 'com.evernote:android-job:1.1.10'
+    compile "com.evernote:android-job:${evernoteJobVersion}"
 
     // ui
-    compile "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
-    compile 'ca.barrenechea.header-decor:header-decor:0.2.8'
+    compile "ca.barrenechea.header-decor:header-decor:${stickyHeaderVersion}"
+    compile "com.github.apl-devs:appintro:${materialIntroVersion}"
 
     // okhttp
-    compile "com.squareup.okhttp:okhttp:${okhttpVersion}"
+//    compile "com.squareup.okhttp:okhttp:${okhttpVersion}"
+    compile "com.squareup.okhttp3:okhttp:${okhttp3Version}"
 
     // for xml parsing
-    compile("org.simpleframework:simple-xml:${simplexmlVersion}"){
+    compile("org.simpleframework:simple-xml:${simplexmlVersion}") {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
 
     // protobuf
-    compile 'com.github.santhoshvai:evlo-protobuf-model:1.1-SNAPSHOT'
-    compile 'com.google.protobuf:protobuf-lite:3.0.1'
+    compile "com.github.santhoshvai:evlo-protobuf-model:${protoModelVersion}"
 
     // leak canary
     debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
