--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,34 @@
 apply plugin: 'com.android.application'
 apply from: "$project.rootDir/tools/script-git-version.gradle"
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "info.santhosh.evlo"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode gitVersionCode
         versionName gitVersionName
         vectorDrawables.useSupportLibrary = true
+        resConfigs "en"
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    signingConfigs {
+        release {
+            // TODO, signing keys
+            storeFile file("release.keystore")
+            storePassword "myPassword"
+            keyAlias "myAlias"
+            keyPassword "Something...."
+        }
     }
 
     buildTypes {
@@ -25,6 +37,7 @@ android {
         }
 
         release {
+            signingConfig signingConfigs.debug // while release to play store, change this
             shrinkResources true
             minifyEnabled true
             useProguard true
@@ -47,18 +60,17 @@ android {
 ext {
     // version numbers
     junitVersion = '4.12'
-    supportLibVersion = '26.0.1'
+    supportLibVersion = '26.0.2'
     constraintLayoutVersion = '1.0.2'
     okhttpVersion = '2.2.0'
     okhttp3Version = '3.8.1'
     simplexmlVersion = '2.7.1'
-    stethoVersion = '1.4.1'
+    stethoVersion = '1.4.2'
     leakCanaryVersion = '1.5.1'
-    materialIntroVersion = 'v4.2.2'
     evernoteJobVersion = '1.1.11'
     stickyHeaderVersion = '0.2.8'
     protoModelVersion = '1.2-SNAPSHOT'
-    multidexVersion = '1.0.1'
+    crashlyticsVersion= '2.6.8'
 }
 
 dependencies {
@@ -78,10 +90,8 @@ dependencies {
 
     // ui
     compile "ca.barrenechea.header-decor:header-decor:${stickyHeaderVersion}"
-    compile "com.github.apl-devs:appintro:${materialIntroVersion}"
 
     // okhttp
-//    compile "com.squareup.okhttp:okhttp:${okhttpVersion}"
     compile "com.squareup.okhttp3:okhttp:${okhttp3Version}"
 
     // for xml parsing
@@ -91,8 +101,13 @@ dependencies {
         exclude module: 'xpp3'
     }
 
-    // protobuf
+    // protobuf model and protobuf lite dependency
     compile "com.github.santhoshvai:evlo-protobuf-model:${protoModelVersion}"
+
+    // crash reporting
+    compile("com.crashlytics.sdk.android:crashlytics:${crashlyticsVersion}@aar") {
+        transitive = true;
+    }
 
     // leak canary
     debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
