--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'io.fabric.tools:gradle:1.24.1' // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
     }
 }
 
@@ -17,6 +17,7 @@ allprojects {
         jcenter()
         maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
