--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "info.santhosh.evlo"
@@ -67,10 +67,10 @@ ext {
     simplexmlVersion = '2.7.1'
     stethoVersion = '1.4.2'
     leakCanaryVersion = '1.5.1'
-    evernoteJobVersion = '1.1.11'
+    evernoteJobVersion = '1.2.0'
     stickyHeaderVersion = '0.2.8'
     protoModelVersion = '1.2-SNAPSHOT'
-    crashlyticsVersion= '2.6.8'
+    crashlyticsVersion = '2.6.8'
 }
 
 dependencies {
