bug fix - file provider was not in the manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,17 @@
             android:value="7bcd126695b5b67b539f400b2d5650348ee94745"
             />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="@string/file_authority"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/fileprovider" />
+        </provider>
+
+
     </application>
 
 </manifest>
