--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply from: "$project.rootDir/tools/script-git-version.gradle"
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "info.santhosh.evlo"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode gitVersionCode
         versionName gitVersionName
         vectorDrawables.useSupportLibrary = true
@@ -56,7 +56,7 @@ android {
 ext {
     // version numbers
     junitVersion = '4.12'
-    supportLibVersion = '26.1.0'
+    supportLibVersion = '27.0.2'
     constraintLayoutVersion = '1.0.2'
     okhttpVersion = '2.2.0'
     okhttp3Version = '3.8.1'
@@ -80,7 +80,9 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:customtabs:${supportLibVersion}"
     compile "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
+
 
     // job scheduler background compatibility
     compile "com.evernote:android-job:${evernoteJobVersion}"
