sql inserts are now also tracked by the progress bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,13 @@ ext {
     // version numbers
     junitVersion = '4.12'
     supportLibVersion = '27.0.2'
-    constraintLayoutVersion = '1.0.2'
+    constraintLayoutVersion = '1.1.0-beta4'
     firebaseVersion='11.8.0'
     okhttp3Version = '3.8.1'
     simplexmlVersion = '2.7.1'
     stethoVersion = '1.4.2'
     leakCanaryVersion = '1.5.1'
-    evernoteJobVersion = '1.2.0'
+    evernoteJobVersion = '1.2.2'
     stickyHeaderVersion = '0.2.8'
     protoModelVersion = '1.2-SNAPSHOT'
     crashlyticsVersion = '2.6.8'
