--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,15 @@ android {
     buildTypes {
         debug {
             versionNameSuffix " Debug"
+            buildConfigField("String", "AD_APP_ID", "\"ca-app-pub-3940256099942544~3347511713\"")
+            resValue("string", "AD_DETAIL_SCREEN_UNIT_ID", "ca-app-pub-3940256099942544/6300978111")
+            resValue("string", "AD_FAVORITES_SCREEN_UNIT_ID","ca-app-pub-3940256099942544/6300978111")
         }
 
         release {
+            buildConfigField("String", "AD_APP_ID", "\"${ad_app_id}\"")
+            resValue("string", "AD_DETAIL_SCREEN_UNIT_ID", "${ad_detail_screen_unit_id}")
+            resValue("string", "AD_FAVORITES_SCREEN_UNIT_ID", "${ad_favorites_screen_unit_id}")
             signingConfig signingConfigs.debug // while release to play store, change this
             shrinkResources true
             minifyEnabled true
@@ -58,7 +64,7 @@ ext {
     junitVersion = '4.12'
     supportLibVersion = '27.0.2'
     constraintLayoutVersion = '1.1.0-beta4'
-    firebaseVersion='11.8.0'
+    firebaseVersion = '11.8.0'
     okhttp3Version = '3.8.1'
     simplexmlVersion = '2.7.1'
     stethoVersion = '1.4.2'
@@ -71,50 +77,52 @@ ext {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile "junit:junit:${junitVersion}"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation "junit:junit:${junitVersion}"
 
     // support libs
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile "com.android.support:support-v4:${supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-    compile "com.android.support:cardview-v7:${supportLibVersion}"
-    compile "com.android.support:design:${supportLibVersion}"
-    compile "com.android.support:customtabs:${supportLibVersion}"
-    compile "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:customtabs:${supportLibVersion}"
+    implementation "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
 
     // firebase
-    compile "com.google.firebase:firebase-ads:${firebaseVersion}"
-
+    implementation "com.google.firebase:firebase-core:${firebaseVersion}"
+    implementation "com.google.firebase:firebase-ads:${firebaseVersion}"
 
     // job scheduler background compatibility
-    compile "com.evernote:android-job:${evernoteJobVersion}"
+    implementation "com.evernote:android-job:${evernoteJobVersion}"
 
     // ui
-    compile "ca.barrenechea.header-decor:header-decor:${stickyHeaderVersion}"
+    implementation "ca.barrenechea.header-decor:header-decor:${stickyHeaderVersion}"
 
     // okhttp
-    compile "com.squareup.okhttp3:okhttp:${okhttp3Version}"
+    implementation "com.squareup.okhttp3:okhttp:${okhttp3Version}"
 
     // for xml parsing
-    compile("org.simpleframework:simple-xml:${simplexmlVersion}") {
+    implementation("org.simpleframework:simple-xml:${simplexmlVersion}") {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
 
     // protobuf model and protobuf lite dependency
-    compile "com.github.santhoshvai:evlo-protobuf-model:${protoModelVersion}"
+    implementation "com.github.santhoshvai:evlo-protobuf-model:${protoModelVersion}"
 
     // crash reporting
-    compile("com.crashlytics.sdk.android:crashlytics:${crashlyticsVersion}@aar") {
+    implementation("com.crashlytics.sdk.android:crashlytics:${crashlyticsVersion}@aar") {
         transitive = true
     }
 
     // leak canary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
 
     // stetho - for inspecting networks and sqlite dbs
-    debugCompile "com.facebook.stetho:stetho:${stethoVersion}"
-    compile "jp.wasabeef:recyclerview-animators:${recyclerViewAnimatorsVersion}"
+    debugImplementation "com.facebook.stetho:stetho:${stethoVersion}"
+    implementation "jp.wasabeef:recyclerview-animators:${recyclerViewAnimatorsVersion}"
 }
+
+apply plugin: 'com.google.gms.google-services'
