--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.google.gms:google-services:3.1.1'
         classpath 'io.fabric.tools:gradle:1.24.1' // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
     }
 }
