--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ ext {
     leakCanaryVersion = '1.5.1'
     evernoteJobVersion = '1.2.2'
     stickyHeaderVersion = '0.2.8'
-    protoModelVersion = '1.2-SNAPSHOT'
+    protoModelVersion = 'c7c9f95840'
     crashlyticsVersion = '2.6.8'
     recyclerViewAnimatorsVersion = '2.2.7'
     materialIntroViewVersion = '1.6.0'
