--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'io.fabric.tools:gradle:1.24.1' // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
     }
@@ -15,9 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
 }
 
