add GDPR consent

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
             applicationIdSuffix ".debug"
             versionNameSuffix " Debug"
             buildConfigField("String", "AD_APP_ID", "\"ca-app-pub-3940256099942544~3347511713\"")
+            buildConfigField("String", "AD_PUB_ID", "\"pub-3940256099942544\"")
             buildConfigField("String", "PROTO_FETCH_URL", "\"https://www.dropbox.com/s/y80ip1cj3k0lds2/commodities_test?dl=1\"")
             resValue("string", "AD_DETAIL_SCREEN_UNIT_ID", "ca-app-pub-3940256099942544/6300978111")
             resValue("string", "AD_FAVORITES_SCREEN_UNIT_ID","ca-app-pub-3940256099942544/6300978111")
@@ -43,6 +44,7 @@ android {
 
         release {
             buildConfigField("String", "AD_APP_ID", "\"${ad_app_id}\"")
+            buildConfigField("String", "AD_PUB_ID", "\"${ad_pub_id}\"")
             buildConfigField("String", "PROTO_FETCH_URL", "\"${proto_fetch_url}\"")
             resValue("string", "AD_DETAIL_SCREEN_UNIT_ID", "${ad_detail_screen_unit_id}")
             resValue("string", "AD_FAVORITES_SCREEN_UNIT_ID", "${ad_favorites_screen_unit_id}")
@@ -79,6 +81,7 @@ ext {
     crashlyticsVersion = '2.6.8'
     recyclerViewAnimatorsVersion = '2.2.7'
     materialIntroViewVersion = '1.6.0'
+    adConsentLibVersion = '1.0.6'
 }
 
 dependencies {
@@ -97,6 +100,9 @@ dependencies {
     // firebase
     implementation "com.google.firebase:firebase-core:${firebaseCoreVersion}"
     implementation "com.google.firebase:firebase-ads:${firebaseAdsVersion}"
+
+    // GDPR consent for admob
+    implementation "com.google.android.ads.consent:consent-library:${adConsentLibVersion}"
 
     // job scheduler background compatibility
     implementation "com.evernote:android-job:${evernoteJobVersion}"
